Changes for automatic invoice generation